[package]
name = "raxtax"
version = "1.2.0"
authors = ["Noah Wahl <noah.ares99@gmail.com>"]
edition = "2021"
repository = "https://github.com/noahares/raxtax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = { version = "1.0.81", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
exitcode = "1.1.2"
flate2 = "1.0.28"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
log = "0.4.21"
logging_timer = "1.1.1"
rayon = "1.9.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
statrs = "0.16.0"

[profile.ultra]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"

[profile.rel-perf]
inherits = "release"
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "ultra"
lto = "thin"
